Switch to voyager path

--- a/css/animate-along-a-path.css
+++ b/css/animate-along-a-path.css
@@ -4,13 +4,9 @@ body {
 
 #outerWrapper {
 	width: 610px;
-	height: 625px;
+	height: 600px;
 	position: relative;
-	/*background:url(http://www.nature.com/polopoly_fs/7.5642.1343835007!/image/BG.png);*/
-	/*background:url(images/BG_noPath.png);*/
-	
-	background-repeat:no-repeat;
-	/*border: 1px solid #000;*/
+	background: black;
 }
 
 #holder {
@@ -83,136 +79,4 @@ body {
 	background:none;
 }
 
-/*Id to add to each close up pic when they are in shot*/
-.closeUp {
-	display:none;
-	position: absolute;
-	overflow: hidden;
-	border: none;
-}
 
-#key {
-	bottom: 37px;
-	left: 20px;
-	width: 590px;
-	height: 27px;
-	position: absolute;
-	background:none;
-}
-
-#graphicCredit {
-	position:absolute;
-	top: 600px;
-	width: 610px;
-	height: 25px;
-    color: #939393;
-    font-size: 85%;
-    font-style: italic;
-    /*line-height: 1.461em;*/
-    text-transform: uppercase;
-  padding-left: 0px;
-}
-
-
-#timeIcon {
-	position:relative;
-	margin-right:2px;
-	width:27px;
-	height:39px;
-	background: url(http://www.nature.com/polopoly_fs/7.5659.1343834115!/image/time.png);
-	background-position:0px 0px;
-	background-repeat:no-repeat;
-	float:left;
-}
-
-#timeIconWhite {
-	position:relative;
-	margin-right:10px;
-	width:27px;
-	height:39px;
-	background: url(http://www.nature.com/polopoly_fs/7.5660.1343834144!/image/timeWhite.png);
-	background-position:0px 0px;
-	background-repeat:no-repeat;
-	float:left;
-}
-
-#timeInfo {
-	position:relative;
-	margin-right:10px;
-	height:27px;
-	float:left;
-	vertical-align:central;
-}
-
-#altitudeIcon {
-	position:relative;
-	margin-right:2px;
-	width:27px;
-	height:39px;
-	background: url(http://www.nature.com/polopoly_fs/7.5640.1343833331!/image/altitude.png);
-	background-position:0 0px;
-	background-repeat:no-repeat;
-	float:left;
-}
-
-#altitudeIconWhite {
-	position:relative;
-	margin-right:10px;
-	width:27px;
-	height:39px;
-	background: url(http://www.nature.com/polopoly_fs/7.5641.1343833362!/image/altitudeWhite.png);
-	background-position:0 0px;
-	background-repeat:no-repeat;
-	float:left;
-}
-
-#altitudeInfo {
-	position:relative;
-	margin-right:10px;
-	height:27px;
-	float:left;
-	vertical-align:central;
-}
-
-#velocityIcon {
-	position:relative;
-	margin-right:2px;
-	width:27px;
-	height:39px;
-	background: url(http://www.nature.com/polopoly_fs/7.5661.1343834181!/image/velocity.png);
-	background-position:0 0px;
-	background-repeat:no-repeat;
-	float:left;
-}
-
-#velocityIconWhite {
-	position:relative;
-	margin-right:10px;
-	width:27px;
-	height:39px;
-	background: url(http://www.nature.com/polopoly_fs/7.5662.1343834205!/image/velocityWhite.png);
-	background-position:0 0px;
-	background-repeat:no-repeat;
-	float:left;
-}
-
-#velocityInfo {
-	position:relative;
-	margin-right:2px;
-	height:27px;
-	float:left;
-	vertical-align:use-script;
-}
-
-
-
-.textWrap {
-	float:left;
-	margin: 0px 10px 5px 2px;
-}
-
-.superText {
-	position: relative;
-	bottom: 0.5em;
-	font-size: 0.8em;
-}
